# azalea

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package-lock.json  package.json
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: .env.example  Cargo.toml  build.rs  supabase.public.env  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/examples/: pty_test.rs
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  models.rs
apps/desktop/src-tauri/src/commands/: backup.rs  files.rs  forwards.rs  groups.rs  hosts.rs  keys.rs  known_hosts.rs  local_terminal.rs  mod.rs  sftp.rs  snippets.rs  ssh.rs  sync.rs
apps/desktop/src-tauri/src/keys/: generate.rs  keyring.rs  mod.rs
apps/desktop/src-tauri/src/sessions/: local.rs  manager.rs  mod.rs
apps/desktop/src-tauri/src/store/: db.rs  mod.rs
apps/desktop/src-tauri/src/sync/: crypto.rs  diff.rs  mod.rs
apps/desktop/src/components/: AddServerDrawer.tsx  AppShell.tsx  AutoSyncPrompt.tsx  ConnectionScreen.tsx  FileBrowserPanel.tsx  ForwardsPopover.tsx  HostTile.tsx  HostsPage.tsx  KeysPage.tsx  Logo.tsx  PopoutTerminal.tsx  SettingsPage.tsx  SnippetsPopover.tsx  SyncResolutionDialog.tsx  SyncSection.tsx  TabBar.tsx  Terminal.tsx  TitleBar.tsx  UpdateSection.tsx
docs/: cloud-sync.md  updater.md  web.md
scripts/: link-web.ps1  write-latest-json.mjs
supabase/: SETUP.md  account.sql  schema.sql
(+27 files in other folders)
