[package]
name = "azalea"
version = "0.1.1"
description = "A modern open-source SSH terminal client"
authors = ["Rexsystems"]
license = "AGPL-3.0-or-later"
edition = "2021"

[lib]
name = "azalea_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
russh = "0.48"
russh-keys = "0.48"
russh-sftp = "2"
ssh-key = { version = "0.6", features = ["ed25519", "rsa"] }
base64 = "0.22"
parking_lot = "0.12"
chrono = "0.4"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
argon2 = "0.5"
aes-gcm = "0.10"
sha2 = "0.10"
dotenvy = "0.15"
portable-pty = "0.9"
